--- a/GastroByte/Views/Administrador/ConfirmarPago.cshtml
+++ b/GastroByte/Views/Administrador/ConfirmarPago.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Confirmación de Pago";
     Layout = "~/Views/Shared/_Layout_admin.cshtml";
+    var nombre = Session["UserName"] as string;
 }
 
 <div class="container">
@@ -45,7 +46,7 @@
         <h3>Datos del Cliente</h3>
         <div class="form-group">
             <label>Nombre Completo</label>
-            <input type="text" name="nombre" class="form-control" required>
+            <input type="text" class="form-control" id="nombre" name="nombre" value="@nombre" />
         </div>
         <div class="form-group">
             <label>Cédula</label>
